--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -41,7 +41,7 @@
   {%- endif -%}
 
   {%- if img_size == blank -%}
-    {%- assign img_size = 'm' -%}
+    {%- assign img_size = 'flexible' -%}
   {%- endif -%}
 
   {% if focal %}
