Fixed `clock` icon

--- a/sections/top-bar.liquid
+++ b/sections/top-bar.liquid
@@ -144,7 +144,7 @@
             "label": "Calendar"
           },
           {
-            "value": "clock-o",
+            "value": "clock",
             "label": "Clock"
           },
           {
