Added carousel item max-width

--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -46,6 +46,7 @@
 .carousel__item {
   position: relative;
   min-width: var(--slide-width-mobile);
+  max-width: var(--slide-width-mobile);
   padding: 0;
   scroll-snap-align: start;
   scroll-snap-stop: always;
@@ -53,6 +54,7 @@
 
 .carousel__item:last-child {
   min-width: calc(var(--slide-width-mobile) + 16px);
+  max-width: calc(var(--slide-width-mobile) + 16px);
 }
 
 .carousel__item:last-child .carousel__inner {
@@ -159,10 +161,12 @@
 
   .carousel__item {
     min-width: var(--slide-width);
+    max-width: var(--slide-width);
   }
 
   .carousel__item:last-child {
     min-width: calc(var(--slide-width) + 16px);
+    max-width: calc(var(--slide-width) + 16px);
   }
 }
 
@@ -174,10 +178,12 @@
 
   .carousel__item {
     min-width: var(--slide-width);
+    max-width: var(--slide-width);
   }
 
   .carousel__item:last-child {
     min-width: calc(var(--slide-width) - 16px);
+    max-width: calc(var(--slide-width) - 16px);
   }
 
   .carousel__inner {
