--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -105,6 +105,12 @@
 
           <h2 class="title__heading h4">
             {{- custom_title | default: collection.title -}}
+
+            {% unless section_preview %}
+              {%- if custom_title != blank and template == "search" and query != blank -%}
+                : {{ query }}
+              {%- endif -%}
+            {%- endunless -%}
           </h2>
 
           <div class="title__description text-medium bq-content rx-content">
