--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -4,7 +4,6 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  color: var(--color-secondary);
 }
 
 .product-card--full-border,
@@ -18,6 +17,10 @@
   overflow: hidden;
   position: relative;
   background: var(--background-primary);
+}
+
+.product-card__vision--white {
+  background: var(--color-white);
 }
 
 .product-card__vision .product-card__link {
@@ -60,6 +63,8 @@
 
 .product-card--full-border .product-card__meta {
   padding: 15px;
+  background: var(--background-primary);
+  color: var(--color-secondary);
 }
 
 .product-card__title {
