Add `use color scheme` option to Product card settings

--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -30,6 +30,7 @@
 {%- assign rounded_corners = settings.card_rounded_corners -%}
 {%- assign show_excerpt    = settings.show_card_excerpt -%}
 {%- assign url             = "" -%}
+{%- assign use_colors      = settings.use_card_color_scheme -%}
 {%- assign use_focal       = settings.use_focal_images -%}
 
 {%- if product != blank -%}
@@ -90,7 +91,7 @@
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="product-card product-card--{{- border -}}-border{% if border == "full" %} color-{{- color_scheme.id -}}{%- endif -%}"{% if id != blank %} id="{{- id -}}"{% endif %} style="{{- card_variables | escape -}}">
+<div class="product-card product-card--{{- border -}}-border{% if border == "full" and use_colors %} color-{{- color_scheme.id -}}{%- endif -%}"{% if id != blank %} id="{{- id -}}"{% endif %} style="{{- card_variables | escape -}}">
   <div class="product-card__vision{% if image_fit == 'contain' %}{% unless image_bg %} product-card__vision--white{% endunless %}{% endif %}{% unless image.url != blank %} no-image{%- endunless -%}">
     {%- if image.url != blank -%}
       {%- render 'image',
