Add white-space nowrap to Weglot widget items in header and footer

--- a/assets/footer.css
+++ b/assets/footer.css
@@ -196,6 +196,7 @@
 }
 
 #section-footer .footer__app .weglot-widget__item {
+  white-space: nowrap;
   transition: all var(--animation-duration) var(--transition-function-ease-in-out);
 }
 
