--- a/assets/header.css
+++ b/assets/header.css
@@ -486,6 +486,7 @@ body:has(#mobile-menu-opener:checked) .header:has(~ #main section:first-child > 
 }
 
 #section-header .app-mobile .weglot-widget__item {
+  white-space: nowrap;
   transition: all var(--animation-duration) var(--transition-function-ease-in-out);
 }
 
