--- a/assets/rx.css
+++ b/assets/rx.css
@@ -113,13 +113,6 @@
 
 .bq-content.rx-content a {
   cursor: pointer;
-  text-decoration: none;
-  color: var(--color-outline);
-}
-
-.bq-content.rx-content a:hover,
-.bq-content.rx-content a:focus {
-  color: var(--color-outline-hover);
 }
 
 .bq-content.rx-content h1,
@@ -152,6 +145,7 @@
   line-height: var(--line-height-sm);
 }
 
+.bq-content.rx-content a,
 .bq-content.rx-content h1 a,
 .bq-content.rx-content h2 a,
 .bq-content.rx-content h3 a,
@@ -159,9 +153,11 @@
 .bq-content.rx-content h5 a,
 .bq-content.rx-content h6 a {
   text-decoration: none;
-  color: var(--color-secondary);
+  color: var(--color-outline);
 }
 
+.bq-content.rx-content a:hover,
+.bq-content.rx-content a:focus,
 .bq-content.rx-content h1 a:hover,
 .bq-content.rx-content h1 a:focus,
 .bq-content.rx-content h2 a:hover,
@@ -174,7 +170,7 @@
 .bq-content.rx-content h5 a:focus,
 .bq-content.rx-content h6 a:hover,
 .bq-content.rx-content h6 a:focus {
-  color: var(--color-secondary-hover);
+  color: var(--color-outline-hover);
 }
 
 .bq-content.rx-content ul,
