--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -104,17 +104,23 @@
           {%- endif -%}
 
           <h2 class="title__heading h4">
-            {{- custom_title | default: collection.title | default: page.title | default: cart.title -}}
+            {%- if section_preview -%}
+              Title
+            {%- else -%}
+              {{- custom_title | default: collection.title | default: page.title | default: cart.title -}}
 
-            {% unless section_preview %}
               {%- if custom_title != blank and template == "search" and query != blank -%}
                 : {{ query }}
               {%- endif -%}
-            {%- endunless -%}
+            {%- endif -%}
           </h2>
 
           <div class="title__description text-medium bq-content rx-content">
-            {{- custom_description | default: collection.description | default: page.content -}}
+            {%- if section_preview -%}
+              Lorem ipsum dolor sit amet.
+            {%- else -%}
+              {{- custom_description | default: collection.description | default: page.content -}}
+            {%- endif -%}
           </div>
         </div>
   {%- if full_width -%}
@@ -165,14 +171,12 @@
       {
         "type": "text",
         "id": "custom_title",
-        "label": "Custom title",
-        "default": "Title"
+        "label": "Custom title"
       },
       {
         "type": "contentEditor",
         "id": "custom_description",
-        "label": "Custom description",
-        "default": "Lorem ipsum dolor sit amet."
+        "label": "Custom description"
       },
       {
         "type": "color_scheme",
